--- a/hacker/README
+++ b/hacker/README
@@ -23,7 +23,7 @@ from a variety of sources.
 Make it awesome! It should show off your talents at data mining, working with
 visual and backend API's and be useful and cool when finished.
 
-The list can be found here: http://kcwppub3.co.kitsap.wa.us/treas/foreclosure.asp
+The list can be found at: http://kcwppub3.co.kitsap.wa.us/treas/foreclosure.asp
 
 The link on the left of each row takes you to a set of detail links, including
 bills from the state.
@@ -41,16 +41,17 @@ Rock out and kick butt by adding historical price information, photos, etc.
 
 Some Rules:
 
-0) Respect the Kitsap County resources -- don't hammer the servers, don't rely on them realtime -- make a copy of the data for your own use
+0) Respect the Kitsap County resources -- don't hammer the servers, don't rely 
+   on them realtime -- make a copy of the data for your own use
 1) Any language / architecture is fine
 2) Any deployment is fine, but we won't pay for deployment, so free might be good.
 3) You'll own the code you create, but we're going to want to look at it.
 4) It's illegal to contact people based on this data, so don't do it!
-5) Do all your work in your own branch; periodically push this branch back
+5) Do all your work in your own branch; periodically push this branch back to 
    github so we can see what you're up to.
 6) Keep track of the rough amount of time you spend.
 
-
+All questions to peterj@myprofitsee.com
 
 
 
