--- a/README
+++ b/README
@@ -1,11 +1,10 @@
 
-
 This repo is for tech tests for potential employees.
 
 To use this repository, you MUST checkout a branch for your own use.
 
-Name it after your first.last, so if your name is Peter Vessenes, your 
-branch should be peter.vessenes
+Name it after your first.last, so if your name is Martin Moschitz, your 
+branch should be martin.moschitz
 
 Do not merge, push or pull into master.
 
